fix button spinner opacity on ios

--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -56,7 +56,7 @@
   padding: 15px;
   border-radius: 6px;
   font-size: 16px;
-  border: 1px solid transparent;
+  // border: 1px solid transparent;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
